# modelify_msgs

./: .gitignore  package.xml
modelify_msgs/: CMakeLists.txt
modelify_msgs/msg/: BoundingBox.msg  Feature.msg  FeatureBlock.msg  FeatureLayer.msg  Features.msg  GraphCluster.msg  GraphEdge.msg  GraphNode.msg  GsmUpdate.msg  LegacyObject.msg  Match.msg  MatchScores.msg  MatchUpdate.msg  MatchUpdates.msg  MergeCandidatesCluster.msg  MergeCandidatesClusters.msg  Object.msg
modelify_msgs/srv/: ComputeGraphClusters.srv  GetSimpleObjects.srv  SessionOperation.srv  SessionOperationBool.srv  UpdateGraphEdges.srv  UpdateGraphNodes.srv
msg/: GsmUpdate.msg  LegacyGsmUpdate.msg  Object.msg  VoxelEvaluationDetails.msg
srv/: ValidateMergedObject.srv
